fix #374: alignment of icons in the footer of sidebar (#375)

--- a/source/css/_layout/sidebar/footer.styl
+++ b/source/css/_layout/sidebar/footer.styl
@@ -5,6 +5,7 @@
   display: grid
   grid-gap: 0.25rem 0.25rem
   grid-template-columns: repeat(auto-fill, 32px)
+  text-align: center
   .social
     line-height: 0
     display: inline-block
